--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-RCD version 1.1
+RCD version 1.1.1
 
-This version adds the "Spread" feature, which is accessed via the breakout panel or jumpers
+Version 1.1: adds the "Spread" feature, which is accessed via the breakout panel or jumpers
 
-VERSION 1.1.1: Reversed orientation of Spread switch
+Version 1.1.1: Reversed orientation of Spread switch
